crates/solidity/testing/snapshots/bindings_output/control/try_catch/generated/0.4.21-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
    ╭─[input.sol:5:9]
    │
  5 │ ╭─▶         try new Foo() {
    ┆ ┆   
 11 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Foo {}
   │          ─┬─  
   │           ╰─── name: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 2
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 3
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ │     contract Foo {}
    │ │     ────────┬───────  
    │ │             ╰───────── definiens: 1
  2 │ ╭───▶ 
    ┆ ┆ ┆   
  4 │ │ ╭─▶     function test() public {
    ┆ ┆ ┆   
 11 │ │ ├─▶     }
    │ │ │           
    │ │ ╰─────────── definiens: 3
 12 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 2
────╯
